discussion/kv_engine/179851/179851_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including kv_bucket.h

kv_bucket.h is the most expensive header as reported by
clang-build-analyzer [1]:

    *** Expensive headers:
    22311 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 54 times, avg 413 ms), included via:
      nexus_kvstore_test.cc.o evp_store_single_threaded_test.h kv_bucket_test.h  (700 ms)
      range_scan_test.cc.o ep_bucket.h  (683 ms)
      bucket_quota_change_test.cc.o evp_store_single_threaded_test.h kv_bucket_test.h  (658 ms)
      kv_bucket_test.cc.o kv_bucket_test.h  (648 ms)
      ...

Reduce the number of headers kv_bucket.h includes; by a combination of:

- Removing unnecessary headers (not directly needed by kv_bucket.h)

- Forward-declaring expensive types and moving the types into their
  own headers (so only other files which need the expensive type pay
  the cost of including them).

[1]: https://cv.jenkins.couchbase.com/view/Nightly/job/kv_engine-nightly-clang-build-analyzer/lastSuccessfulBuild/artifact/clang_build_analyzer_everything.log

Change-Id: I5da10ddd3a6362f4f371a58d909227360b323b97

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-20 09:58:20.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-20 10:22:08.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20493/ : FAILURE

clang-tidy found the following problems:

<pre>
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:83:16: error: invalid application of "sizeof" to an incomplete type "KVFileHandle" [clang-diagnostic-error]
        static_assert(sizeof(_Tp)>0,
                      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:182:4: note: in instantiation of member function "std::default_delete<KVFileHandle>::operator()" requested here
          _M_deleter()(__old_p);
          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:167:2: note: in instantiation of member function "std::__uniq_ptr_impl<KVFileHandle, std::default_delete<KVFileHandle> >::reset" requested here
        reset(__u.release());
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:212:61: note: in instantiation of member function "std::__uniq_ptr_impl<KVFileHandle, std::default_delete<KVFileHandle> >::operator=" requested here
      __uniq_ptr_data& operator=(__uniq_ptr_data&&) = default;
                                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:15:7: note: forward declaration of "KVFileHandle"
class KVFileHandle;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20493/ )

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:83:16:
error: invalid application of "sizeof" to an incomplete type "KVFileHandle" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20493/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19715/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49503/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41607/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21856/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10204/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22842/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23624/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10302/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22471/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30870/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
